--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,28 +16,20 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Pawpal-AI
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: { node-version: 20 }
+      - run: npm install
+      - run: npm run build
+      - run: cp dist/index.html dist/404.html
+      - uses: actions/upload-pages-artifact@v3
         with:
-          node-version: 20
+          path: Pawpal-AI/dist   
 
-      - name: Install deps
-        run: npm install       # 没有 package-lock.json 用 npm install 最稳
-
-      - name: Build
-        run: npm run build
-
-      - name: SPA 404 fallback
-        run: cp dist/index.html dist/404.html
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist
 
   deploy:
     needs: build
